# HypersonicVehicles-PreLandingSimulator

./: .gitignore  BACKEND_INTEGRATION_STATUS.md  COMPLETE_PROJECT_DOCUMENTATION.md  Dockerfile  PHYSICS_IMPLEMENTATION_EXPLAINED.md  README.md  TRAJECTORY_RENDERING_ANALYSIS.md  docker-compose.yml  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml
UI_Images/: stage1  stage3
client/: debug.html  index.html  sw-tiles.js  test-app-loading.sh  test-browser.html  test-full-app.html  test-import.html  test-imports.html  test-load-sequence.mjs
client/src/: main.js
client/styles/: app.css  main.css
mars-edl-simulation/: .env.example  Dockerfile  QUICK_START.md  README.md  camera-test.html  docker-compose.yml  index.html  index.js  nginx.conf  package-lock.json  package.json  setup.bat  start.bat  vite.config.js
server/: server.js
sim-server/: .gitignore  Dockerfile  README.md  benchmark_DOP853_1e9_cartesian.npz  benchmark_RK45_1e9.npz  benchmark_optimized_RK45_cartesian.npz  pyproject.toml
sim-server/scripts/: prefetch_tiles.py
sim-server/src/sim-server/: analytic_simulation.py  main.py  test_analytic_simulation.py
sim-server/src/sim-server/OP/: entryeoms.py  main.py
sim-server/src/sim_server/: log.ini  main.py  server_helpers.py
sim-server/src/sim_server/OP/: coordinates.py  entryeoms.py  main.py  test_high_fidelity.py
sim-server/src/sim_server/constants/: defaults.py  planets.py  schemas.py  vehicles.py
sim-server/src/sim_server/data/: mars-gram-avg.csv
tools/: generate_mars_normal_map.py  generate_mars_textures.py
(+99 files in other folders)
