[project]
name = "sim-server"
version = "0.1.0"
description = "LSPE Hypersonic Vehicles Simulation Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.2",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
