[project]
name = "sim-server"
version = "0.1.0"
description = "LSPE Hypersonic Vehicles Simulation Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "scipy>=1.16.2",
    "uvicorn>=0.35.0",
]
